fixed z-index drift

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,19 +16,16 @@ html, body, #app {
 .main_app {
     display: flex;
     height: 100%;
-    overflow: hidden;
 }
-
+/*
 *::-webkit-scrollbar {
     display: none;
-}
+}*/
 
 header {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    z-index: 1;
-    position: absolute;
     width: 100%;
     height: 100%;
 }
@@ -37,6 +34,7 @@ header {
     margin-left: 14rem;
     width: 100%;
     background-color: #495057;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -44,6 +42,9 @@ header {
     overflow-y: scroll;
 }
 
+.lateral_container {
+    display: flex;
+}
 
 .top_menu {
     width: 100%;
@@ -54,6 +55,9 @@ header {
     justify-content: space-between;
     padding: 1rem;
     color: #dee2e6;
+    position: fixed;
+    z-index: 1;
+    border-bottom: 1px solid #212529;
 }
 
 .top_menu > h2 {
@@ -78,7 +82,7 @@ header {
 .lateral_menu {
     height: 100%;
     width: 14rem;
-    border-top: 1px solid #212529;
+    position: fixed;
     background-color: #343a40;
     display: flex;
     flex-direction: column;
